nexus-helm/templates/ingress.yaml
 apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: nexus-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: "/"
  spec:
    rules:
      - host: nexus.example.com
        http:
          paths:
            - path: "/"
              pathType: Prefix
              backend:
                service:
                  name: nexus
                  port:
                    number: 8081
